# msrt-html-extractor

./: .env.neo4j  .gitignore  GRAPHMODEL.md  NEO4J_BUSINESS_QUERIES.md  NEO4J_MIGRATION_QUERIES.md  NEO4J_SETUP.md  NEO4J_VISUAL_QUERIES.md  README.md  config.py  docker-compose.yml  extractor_helpers.py  json_to_csv.py  main.py  models.py  mstr-extractor.py  output.py  output_test.json  parallel_extractor.py  pyproject.toml  requirements.txt
cache/: __init__.py  memory_cache.py
config/: db_schema.yaml
db/: __init__.py  schema_loader.py
docs/: README.md  advanced.md  api-reference.md  getting-started.md  user-guide.md
exporters/: __init__.py  csv_exporter.py
extractors/: __init__.py  attribute_extractor.py  base_extractor.py  dataset_extractor.py  metric_extractor.py  report_extractor.py
parsers/: __init__.py  attribute_parser.py  base_parser.py  fact_parser.py  link_resolver.py  metric_parser.py  report_parser.py
scripts/: import_to_database.py  init_neo4j_schema.py  load_to_neo4j.py  normalize_data.py
sql/: create_schema.sql
src/microstrategy_extractor/: __init__.py
src/microstrategy_extractor/cache/: __init__.py  cache_manager.py  memory_cache.py
src/microstrategy_extractor/config/: __init__.py  settings.py
src/microstrategy_extractor/core/: __init__.py  constants.py  exceptions.py  models.py  types.py
src/microstrategy_extractor/db/: __init__.py  schema_loader.py
src/microstrategy_extractor/exporters/: __init__.py  csv_exporter.py  json_exporter.py
src/microstrategy_extractor/extractors/: __init__.py  attribute_extractor.py  base_extractor.py  dataset_extractor.py  extractor_helpers.py  metric_extractor.py  parallel_extractor.py  report_extractor.py
src/microstrategy_extractor/i18n/: __init__.py  base.py  en_us.py  pt_br.py
src/microstrategy_extractor/legacy/: __init__.py  extractor.py  html_parser.py
src/microstrategy_extractor/parsers/: attribute_parser.py  base_parser.py  fact_parser.py  link_resolver.py  metric_parser.py  report_parser.py
src/microstrategy_extractor/scripts/: __init__.py  init_neo4j_schema.py  load_to_neo4j.py  reset_neo4j.py
src/microstrategy_extractor/utils/: logger.py  text_normalizer.py
src/microstrategy_extractor/validators/: __init__.py  data_validator.py
utils/: __init__.py  logger.py  text_normalizer.py
validators/: __init__.py  data_validator.py
